Remove dnsmasq from inside the container
We used to do more complex proxying inside the container, I think to allow us to
run integration tests on both the dev container and the production container,
but we haven't for some time

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,8 @@ commands:
       - run: env
       - run: scripts/support/create-app-directories
       - run: scripts/support/create-cache-directories
-      - run: scripts/support/start-background-services dnsmasq postgresql
+      - run: scripts/support/setup-hosts
+      - run: scripts/support/start-background-services postgresql
 
   ##########################
   # Rust
