Document an important realization

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,10 @@
 version: 2.1
+
+# There is a strong connection between this file and the equivalent files for
+# running Dark in dev, which are scripts/builder and
+# scripts/support/build-server. Generally, if you add something to this file,
+# there's an equivalent to be added in one of those files.
+
 executors:
   my-executor:
     docker:
