Don't create unnecessary caches
We started using branch-based caches, but there's really not much to be gained
by doing that. However, there was a large cost, in that creating the new cache
took 150 seconds. So let's not bother

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -196,7 +196,6 @@ jobs:
       - setup-app
       - restore_cache:
           keys:
-            - v2d-backend-{{ checksum "backend/esy.json" }}-{{ .Branch }}
             - v2d-backend-{{ checksum "backend/esy.json" }}
             - v2d-backend
       # appsupport is needed for a unit test
@@ -216,7 +215,7 @@ jobs:
             - backend/_esy
             - backend/node_modules
             - /home/dark/.esy
-          key: v2d-backend-{{ checksum "backend/esy.json" }}-{{ .Branch }}
+          key: v2d-backend-{{ checksum "backend/esy.json" }}
       - persist_to_workspace:
           root: "."
           paths:
