--- a/client/package.json
+++ b/client/package.json
@@ -5,29 +5,29 @@
   "private": true,
   "author": "",
   "devDependencies": {
-    "browserify": "^16.5.0",
-    "browserify-incremental": "^3.1.1",
+    "browserify": "16.5.0",
+    "browserify-incremental": "3.1.1",
     "bs-platform": "7.0.1",
-    "node-sass": "^4.13.0",
-    "npm-run-all": "^4.1.3",
+    "node-sass": "4.13.0",
+    "npm-run-all": "4.1.5",
     "testcafe": "1.7.1",
-    "prettier": "^1.19.1",
+    "prettier": "1.19.1",
     "jsdom": "15.2.1",
     "dom-storage": "2.1.0",
     "jsdom-global": "3.0.2"
   },
   "dependencies": {
     "@glennsl/bs-json": "5.0.1",
-    "bs-fetch": "^0.5.0",
-    "bs-uuid": "^0.3.1",
-    "bs-webapi": "^0.15.6",
+    "bs-fetch": "0.5.0",
+    "bs-uuid": "0.3.1",
+    "bs-webapi": "0.15.6",
     "bucklescript-tea": "darklang/bucklescript-tea#master",
-    "clipboard-copy": "^3.1.0",
-    "domready": "^1.0.8",
-    "mouse-wheel": "^1.2.0",
-    "pusher-js": "^5.0.3",
-    "rollbar": "^2.14.4",
-    "sha2": "^1.0.2",
+    "clipboard-copy": "3.1.0",
+    "domready": "1.0.8",
+    "mouse-wheel": "1.2.0",
+    "pusher-js": "5.0.3",
+    "rollbar": "2.14.4",
+    "sha2": "1.0.2",
     "tablecloth-bucklescript": "0.0.6",
     "html2canvas": "1.0.0-rc.5"
   },
