--- a/client/package.json
+++ b/client/package.json
@@ -34,12 +34,12 @@
   "scripts": {
     "clean": "../scripts/bsb-wrapper.sh -clean-world",
     "build:bsb": "../scripts/bsb-wrapper.sh -make-world",
-    "build:js": "browserifyinc --cachefile lib/browserify-cache.json lib/js/src/App.bs.js --standalone app -o ../backend/static/app.js",
+    "build:app": "browserifyinc --cachefile lib/browserify-app-cache.json lib/js/src/App.bs.js --standalone app -o ../backend/static/app.js",
     "build:appsupport": "browserifyinc --cachefile lib/browserify-cache.json src/appsupport.js --standalone appsupport -o ../backend/static/appsupport.js",
-    "build:fetcher": "browserifyinc --cachefile lib/browserify-cache.json lib/js/workers/Fetcher.bs.js --standalone fetcher -o ../backend/static/fetcher.js",
-    "build:analysiswrapper": "browserifyinc --cachefile lib/browserify-cache.json lib/js/workers/AnalysisWrapper.bs.js --standalone analysiswrapper -o ../backend/static/analysiswrapper.js",
-    "copy:static": "cp -rf static/* ../backend/static/",
-    "build": "run-s build:bsb build:js build:appsupport build:fetcher build:analysiswrapper copy:static",
+    "build:fetcher": "browserifyinc --cachefile lib/browserify-fetcher-cache.json lib/js/workers/Fetcher.bs.js --standalone fetcher -o ../backend/static/fetcher.js",
+    "build:analysiswrapper": "browserifyinc --cachefile lib/browserify-analysis-wrapper-cache.json lib/js/workers/AnalysisWrapper.bs.js --standalone analysiswrapper -o ../backend/static/analysiswrapper.js",
+    "copy:static": "rsync -a static/* ../backend/static/",
+    "build": "npm-run-all --sequential build:bsb --parallel build:app build:appsupport build:fetcher build:analysiswrapper copy:static",
     "test": "cd .. && scripts/runtests --dom"
   }
 }
