--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -225,12 +225,12 @@ jobs:
             rm -Rf /home/dark/.esy/3/b
             # It seems like everything builds and rebuilds fine without
             # these. Other files are needed: .o, .a, .cma, .cmx.
-            find /home/dark/.esy/3/i | grep \\.cmt$ | xargs rm
-            find /home/dark/.esy/3/i | grep \\.cmti$ | xargs rm
-            find /home/dark/.esy/3/i | grep \\.byte$ | xargs rm
-            find /home/dark/.esy/3/i | grep \\.cmxs$ | xargs rm
+            find /home/dark/.esy/3/i | grep \\.cmt$ | xargs rm -f
+            find /home/dark/.esy/3/i | grep \\.cmti$ | xargs rm -f
+            find /home/dark/.esy/3/i | grep \\.byte$ | xargs rm -f
+            find /home/dark/.esy/3/i | grep \\.cmxs$ | xargs rm -f
             # These can be very cheaply rebuilt, and are about 400MB
-            rm /home/dark/app/backend/_build/default/*/*.exe
+            rm /home/dark/app/backend/_build/default/*/*.exe -f
       - show-large-files-and-directories
       - save_cache:
           paths:
