--- a/client/package.json
+++ b/client/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "clean": "../scripts/bsb-wrapper.sh -clean-world",
     "build:bsb": "../scripts/bsb-wrapper.sh -make-world",
-    "build:app": "browserifyinc --cachefile lib/browserify-app-cache.json lib/js/src/App.bs.js --standalone app -o ../backend/static/app.js",
+    "build:app": "browserifyinc --cachefile lib/browserify-app-cache.json lib/js/src/app/Main.bs.js --standalone app -o ../backend/static/app.js",
     "build:appsupport": "browserifyinc --cachefile lib/browserify-cache.json src/appsupport.js --standalone appsupport -o ../backend/static/appsupport.js",
     "build:fetcher": "browserifyinc --cachefile lib/browserify-fetcher-cache.json lib/js/workers/Fetcher.bs.js --standalone fetcher -o ../backend/static/fetcher.js",
     "build:analysiswrapper": "browserifyinc --cachefile lib/browserify-analysis-wrapper-cache.json lib/js/workers/AnalysisWrapper.bs.js --standalone analysiswrapper -o ../backend/static/analysiswrapper.js",
