We still need some files from the client for the container
To build etags

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -426,6 +426,7 @@ workflows:
             - build-client
       - gcp-containers-test:
           requires:
+            - build-client # to rebuild etags
             - build-backend
             - build-stroller
             - build-queue-scheduler
