Don't forget to prep creating containers

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,6 +121,7 @@ commands:
 
   build-gcp-containers:
     steps:
+      - prep-container-creation
       - run:
           name: Regenerate combined ETags
           command: |
