--- a/scripts/support/kubernetes/builtwithdark/honeycomb.yaml
+++ b/scripts/support/kubernetes/builtwithdark/honeycomb.yaml
@@ -78,8 +78,27 @@ data:
         dataset: kubernetes-bwd-ocaml
         parser: json
         processors:
+        # 'request' is what we used to call 'name'; it's in here for the moment
+        # so honeycomb knows how to handle both for the brief period when we
+        # have logs with the old name and logs with the new name.
         - request_shape:
             field: request
+            patterns:
+            - /a/:canvas
+            - /api/:canvas/save_test
+            - /api/:canvas/rpc
+            - /api/:canvas/add_op
+            - /api/:canvas/initial_load
+            - /api/:canvas/execute_function
+            - /api/:canvas/get_trace_data
+            - /api/:canvas/get_unlocked_dbs
+            - /api/:canvas/get_worker_stats
+            - /api/:canvas/get_db_stats
+            - /api/:canvas/delete_404
+            - /api/:canvas/static_assets
+            - /canvas/:canvas/events/:event # stroller - not currently routed through nginx
+        - request_shape:
+            field: name
             patterns:
             - /a/:canvas
             - /api/:canvas/save_test
